--- a/docs-site/blog/xxxx-xx-xx-release-0.20.0.mdx
+++ b/docs-site/blog/xxxx-xx-xx-release-0.20.0.mdx
@@ -59,7 +59,7 @@ After typing a dot in an expression (e.g. `${initiator.}`), the plugin suggests 
 
 Navigation also works for **nested properties** — clicking `host` in `${config.db.host}` walks the property chain to the corresponding YAML key.
 
-<figure className="docFigure docFigure--md">
+<figure className="docFigure docFigure--sm4">
     <img src={require('@site/static/img/find-usages-variable.png').default} alt="Find Usages for a variable" />
     <figcaption>
         Find Usages showing all expression references to a variable declared in a set step.
