--- a/docs-site/docs/features/dependencies.mdx
+++ b/docs-site/docs/features/dependencies.mdx
@@ -18,8 +18,8 @@ When a project is opened, the plugin:
 
 1. **Collects** all dependency declarations from `configuration.dependencies`, `configuration.extraDependencies`,
    and the same sections inside <span className="tokenBadge" data-kind="section">profiles</span>.
-2. **Resolves** each dependency to a local JAR file using your Maven local repository (`~/.m2/repository`).
-   If a JAR is not found locally and the IntelliJ Maven plugin is available, it will attempt to download it.
+2. **Resolves** each dependency to a local JAR file using your dependencies cache (`~/.concord/depsCache` by default).
+   If a JAR is not found locally, it will attempt to download it from the [configured repositories](#repository-configuration).
 3. **Extracts** task names by scanning `@Named` annotations inside the JARs
    (via the `META-INF/sisu/javax.inject.Named` index).
 4. **Provides** the extracted names as completion suggestions for <span className="tokenBadge" data-kind="step">task:</span> values, scoped to the correct project.
@@ -185,7 +185,50 @@ with two actions:
 The initial load happens automatically when the project is opened. After that, the plugin only prompts
 for a reload when actual dependency values change (whitespace-only edits are ignored).
 
-:::note Maven Integration
-If the IntelliJ Maven plugin is installed, the plugin uses its configured repositories and local repository path.
-Otherwise, it falls back to the default `~/.m2/repository` location.
+## Repository Configuration
+
+The plugin uses Concord CLI's `mvn.json` file (`~/.concord/mvn.json`) to determine which Maven repositories
+to use when resolving dependencies. You can manage repositories directly from the IDE via
+**Settings | Tools | Concord | Repositories**.
+
+<figure className="docFigure docFigure--lg">
+    <img src={require('@site/static/img/repositories-settings.png').default} alt="Repositories settings page" />
+    <figcaption>
+        The Repositories settings page showing configured Maven repositories and the dependencies cache path.
+    </figcaption>
+</figure>
+
+### Settings
+
+- **Dependencies cache path** — Local directory where resolved JARs are stored. Defaults to `~/.concord/depsCache`.
+  This path is also passed to the Concord CLI as `--deps-cache-dir` when [running flows](./run-configurations).
+- **Configuration file** — Shows the path to `mvn.json` (`~/.concord/mvn.json`). The CLI always reads from this fixed location.
+- **Maven repositories** — A table of configured repositories. Use the toolbar buttons to add, edit, or remove entries.
+
+### Adding a Repository
+
+Click **+** to open the repository editor dialog. Each repository supports:
+
+- **ID** and **URL** — Required. The repository identifier and its HTTP(S) endpoint.
+- **Authentication** — Optional username and password for authenticated repositories.
+- **Release Policy** / **Snapshot Policy** — Control whether releases or snapshots are enabled, and set the update policy (`never`, `always`, `daily`) and checksum policy (`ignore`, `warn`, `fail`).
+- **Proxy** — Optional HTTP or HTTPS proxy configuration.
+
+<figure className="docFigure docFigure--sm2">
+    <img src={require('@site/static/img/repository-edit-dialog.png').default} alt="Repository editor dialog" />
+    <figcaption>
+        The repository editor dialog with authentication, policy, and proxy settings.
+    </figcaption>
+</figure>
+
+Changes are written to `~/.concord/mvn.json` when you click **Apply** or **OK**. The same file is read by the
+Concord CLI, so the IDE and CLI always share the same repository configuration.
+
+:::tip
+If no repositories are configured, the plugin automatically falls back to Maven Central.
+:::
+
+:::note
+The plugin no longer uses IntelliJ's Maven plugin for repository configuration. All repository
+settings are managed through `mvn.json`, which is shared with the Concord CLI.
 :::
